# agent-studio-starter

./: .env.example  .gitignore  LICENSE  Makefile  README.md  context7.json  skaffold.yaml
backend/: .dockerignore  .python-version  Dockerfile  Makefile  README.md  pyproject.toml
backend/k8s/: deployment.yaml
backend/src/agent/: main.py  utils.py
backend/tests/agent/: test_main.py
docs/codedocs/: agent-graph.md  architecture.md  copilot-runtime.md  generative-ui.md  index.md
docs/codedocs/api-reference/: backend-agent-utils.md  backend-main.md  frontend-copilot-route.md  frontend-layout.md  frontend-page.md
docs/codedocs/guides/: adding-a-tool.md  local-development.md  skaffold-deployment.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/k8s/: deployment.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
notebooks/: evaluate.ipynb
